chore: use toList